--- a/package.json
+++ b/package.json
@@ -4,5 +4,10 @@
   "devDependencies": {
     "vite": "^5.4.19",
     "vite-plugin-ruby": "^5.1.1"
+  },
+  "dependencies": {
+    "@hotwired/stimulus": "^3.2.2",
+    "@hotwired/turbo-rails": "^8.0.16",
+    "vite-plugin-rails": "^0.5.0"
   }
 }
