--- a/package.json
+++ b/package.json
@@ -2,12 +2,17 @@
   "private": true,
   "type": "module",
   "devDependencies": {
+    "sass-embedded": "^1.89.2",
     "vite": "^5.4.19",
     "vite-plugin-ruby": "^5.1.1"
   },
   "dependencies": {
     "@hotwired/stimulus": "^3.2.2",
     "@hotwired/turbo-rails": "^8.0.16",
+    "@popperjs/core": "^2.11.8",
+    "@rails/ujs": "^7.1.3-4",
+    "bootstrap": "^5.3.7",
+    "jquery": "^3.7.1",
     "vite-plugin-rails": "^0.5.0"
   }
 }
