--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@popperjs/core": "^2.11.8",
     "@rails/ujs": "^7.1.3-4",
     "bootstrap": "^5.3.7",
+    "bootstrap-icons": "^1.13.1",
     "jquery": "^3.7.1",
     "vite-plugin-rails": "^0.5.0"
   }
