--- a/config/database.yml
+++ b/config/database.yml
@@ -11,14 +11,14 @@ default: &default
 
 development:
   <<: *default
-  database: storage/development.sqlite3
+  database: storage/book-hoard-development.sqlite3
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: storage/test.sqlite3
+  database: storage/book-hoard-test.sqlite3
 
 
 # Store production database in the storage/ directory, which by default
@@ -26,7 +26,7 @@ test:
 production:
   primary:
     <<: *default
-    database: storage/production.sqlite3
+    database: storage/book-hoard-production.sqlite3
   cache:
     <<: *default
     database: storage/production_cache.sqlite3
